<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/someimage"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/imporTxt"
        />
    <EditText
        android:id="@+id/import_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json1"/>
    </LinearLayout>